<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/ivLogoApp"
        android:transitionName="logoApp"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo_app_content_desc"
        android:src="@drawable/ic_world"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/helvetica_neue"
        android:text="@string/app_name"
        android:textColor="@color/primaryTextColor"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/ivLogoApp"
        app:layout_constraintTop_toTopOf="@id/ivLogoApp" />


    <LinearLayout
        android:id="@+id/containerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubTitleRemember">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/old_version"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btUpdateApp"
            style="@style/button"
            android:layout_marginBottom="16dp"
            android:text="@string/update_app" />

        <Button
            android:id="@+id/btUpdateLater"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_later"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="#ffffff"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvSubTitleRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_version_app_text"
        android:textColor="#9EB0BC"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvAppName"
        app:layout_constraintTop_toBottomOf="@id/tvAppName" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>