<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.TripFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvSubTitleSignUp">

    <LinearLayout
        android:padding="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogoApp"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_world"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/helvetica_neue"
                android:text="@string/app_name"
                android:textColor="@color/primaryTextColor"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/ivLogoApp"
                app:layout_constraintTop_toTopOf="@+id/ivLogoApp" />

            <TextView
                android:id="@+id/tvSubTitleSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_subtitle"
                android:textColor="#9EB0BC"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvAppName"
                app:layout_constraintTop_toBottomOf="@+id/tvAppName" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/travel_name" />

                <EditText
                    android:id="@+id/etTravelName"
                    style="@style/field_edit_text"
                    tools:text="Bate e volta para Bertioga" />

            </LinearLayout>

            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/travel_destination" />

                <EditText
                    android:id="@+id/etTravelDestination"
                    style="@style/field_edit_text"
                    tools:text="Bertioga, São Paulo" />

            </LinearLayout>

            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/travel_date_start" />

                <EditText
                    android:id="@+id/etDateStartTravel"
                    style="@style/field_edit_text"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:text="15/08/2020" />

            </LinearLayout>

            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/travel_date_end" />

                <EditText
                    android:id="@+id/etDateFinishTravel"
                    style="@style/field_edit_text"
                    android:inputType="none"
                    tools:text="16/08/2020" />
            </LinearLayout>

            <Button
                android:id="@+id/btCreateTravel"
                android:text="@string/button_create_travel"
                style="@style/button"/>

            <TextView
                android:id="@+id/tvCancel"
                style="@style/link"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/button_cancel" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>